build using gitenberg.travis

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: State-of-the-Union-Addresses_5038
+_version: 0.1.0
 creator:
   author:
     agent_name: Roosevelt, Franklin D. (Franklin Delano)
