--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: State-of-the-Union-Addresses_5038
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Roosevelt, Franklin D. (Franklin Delano)
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/67
     wikipedia: http://en.wikipedia.org/wiki/Franklin_D._Roosevelt
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5038#State-of-the-Union-Addresses
 gutenberg_bookshelf: World War II
 gutenberg_issued: '2004-02-01'
 gutenberg_type: Text
