--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: State-of-the-Union-Addresses_5038
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'J'
 - !lcsh 'Presidents -- United States -- Messages'
 - !lcsh 'United States -- Politics and government -- Sources'
+- GITenberg
 title: State of the Union Addresses
 url: http://www.gutenberg.org/ebooks/5038
